// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListField component should render with no items and an "add" button 1`] = `
<div>
  <button
    class="d-flex align-items-center addButton btn btn-secondary"
    type="button"
  >
    <i
      class="material-icons md-2"
    >
      add
    </i>
  </button>
</div>
`;

exports[`ListField component should render with some items and an "add" button 1`] = `
<div>
  <button
    class="d-flex align-items-center addButton btn btn-secondary"
    type="button"
  >
    <i
      class="material-icons md-2"
    >
      add
    </i>
  </button>
  <div
    class="row row"
  >
    <div
      class="flex-grow pr-0 col"
    >
      <div
        class="wrapper my-0"
      >
        <input
          class="input"
          data-resizable="false"
          id="input-text-1"
          maxlength="100"
          name="item-0"
          placeholder="Type something (limited to 100 characters)"
          required=""
          size="300"
          type="text"
          value="foo"
        />
      </div>
    </div>
    <div
      class="d-flex col-sm-auto delete col"
    >
      <i
        class="material-icons md-2 text-danger"
      >
        clear
      </i>
    </div>
  </div>
  <div
    class="row row"
  >
    <div
      class="flex-grow pr-0 col"
    >
      <div
        class="wrapper my-0"
      >
        <input
          class="input"
          data-resizable="false"
          id="input-text-2"
          maxlength="100"
          name="item-1"
          placeholder="Type something (limited to 100 characters)"
          required=""
          size="300"
          type="text"
          value="bar"
        />
      </div>
    </div>
    <div
      class="d-flex col-sm-auto delete col"
    >
      <i
        class="material-icons md-2 text-danger"
      >
        clear
      </i>
    </div>
  </div>
</div>
`;

exports[`ListField component should render with the max number of items and no "add" button 1`] = `
<div>
  <button
    class="d-flex align-items-center addButton btn btn-secondary disabled"
    disabled=""
    type="button"
  >
    <i
      class="material-icons md-2"
    >
      add
    </i>
  </button>
  <div
    class="row row"
  >
    <div
      class="flex-grow pr-0 col"
    >
      <div
        class="wrapper my-0"
      >
        <input
          class="input"
          data-resizable="false"
          id="input-text-3"
          maxlength="100"
          name="item-0"
          placeholder="Type something (limited to 100 characters)"
          required=""
          size="300"
          type="text"
          value="foo"
        />
      </div>
    </div>
    <div
      class="d-flex col-sm-auto delete col"
    >
      <i
        class="material-icons md-2 text-danger"
      >
        clear
      </i>
    </div>
  </div>
  <div
    class="row row"
  >
    <div
      class="flex-grow pr-0 col"
    >
      <div
        class="wrapper my-0"
      >
        <input
          class="input"
          data-resizable="false"
          id="input-text-4"
          maxlength="100"
          name="item-1"
          placeholder="Type something (limited to 100 characters)"
          required=""
          size="300"
          type="text"
          value="bar"
        />
      </div>
    </div>
    <div
      class="d-flex col-sm-auto delete col"
    >
      <i
        class="material-icons md-2 text-danger"
      >
        clear
      </i>
    </div>
  </div>
</div>
`;
